# gdrcoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  libgdrcoinconsensus.pc.in
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  core_read.cpp  core_write.cpp  (+92 more)
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_gdrcoin.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  prevector_destructor.cpp  rollingbloom.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  common.h  hashblock.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_sse4.cpp  sha512.cpp  sha512.h
src/crypto/ctaes/: README.md
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  callback.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  gdrcoin.cpp  gdrcoin.qrc  gdrcoin_locale.qrc  gdrcoinaddressvalidator.cpp  gdrcoinaddressvalidator.h  gdrcoinamountfield.cpp  gdrcoinamountfield.h  gdrcoingui.cpp  gdrcoingui.h  gdrcoinstrings.cpp  gdrcoinunits.cpp  gdrcoinunits.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  (+70 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: gdrcoin_af.ts  gdrcoin_af_ZA.ts  gdrcoin_be_BY.ts  gdrcoin_bg.ts  gdrcoin_bg_BG.ts  gdrcoin_bs.ts  gdrcoin_ca.ts  gdrcoin_ca@valencia.ts  gdrcoin_ca_ES.ts  gdrcoin_cs.ts  gdrcoin_cy.ts  gdrcoin_da.ts  gdrcoin_de.ts  gdrcoin_de_DE.ts  gdrcoin_el.ts  gdrcoin_el_GR.ts  gdrcoin_en.ts  gdrcoin_en_AU.ts  gdrcoin_en_GB.ts  gdrcoin_en_US.ts  gdrcoin_eo.ts  gdrcoin_es.ts  gdrcoin_es_419.ts  gdrcoin_es_AR.ts  gdrcoin_es_CL.ts  gdrcoin_es_CO.ts  gdrcoin_es_DO.ts  gdrcoin_es_ES.ts  gdrcoin_es_MX.ts  gdrcoin_es_UY.ts  gdrcoin_es_VE.ts  gdrcoin_et.ts  gdrcoin_et_EE.ts  gdrcoin_eu_ES.ts  gdrcoin_fi.ts  gdrcoin_fr.ts  gdrcoin_fr_CA.ts  gdrcoin_fr_FR.ts  gdrcoin_gl.ts  gdrcoin_hr.ts  (+37 more)
src/qt/res/: gdrcoin-qt-res.rc
src/qt/res/icons/: gdrcoin.icns
src/qt/res/movies/: makespinner.sh
src/qt/test/: Makefile  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  wallettests.cpp  wallettests.h
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: gdrcoinconsensus.cpp  gdrcoinconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/java/: org_gdrcoin_NativeSecp256k1.c  org_gdrcoin_NativeSecp256k1.h  org_gdrcoin_Secp256k1Context.c  org_gdrcoin_Secp256k1Context.h
src/secp256k1/src/java/org/gdrcoin/: NativeSecp256k1.java  (+3 more)
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  (+23 more)
src/test/data/: README.md
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  feebumper.cpp  feebumper.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: accounting_tests.cpp  crypto_tests.cpp  wallet_test_fixture.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+246 files in other folders)
